welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:-42: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-41: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-38: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^Runner:-23: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^Runner:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^